ANOVA and Chi Square Tests conducted on each var and EngagementLevel

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "id": "a12fd7d0",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy.stats import chi2_contingency\n",
+    "from scipy.stats import chi2_contingency, f_oneway\n",
     "\n",
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "id": "29a47002",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
+   "id": "aaa76d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PlayerID                        int64\n",
+      "Age                             int64\n",
+      "Gender                         object\n",
+      "Location                       object\n",
+      "GameGenre                      object\n",
+      "PlayTimeHours                 float64\n",
+      "InGamePurchases                 int64\n",
+      "GameDifficulty                 object\n",
+      "SessionsPerWeek                 int64\n",
+      "AvgSessionDurationMinutes       int64\n",
+      "PlayerLevel                     int64\n",
+      "AchievementsUnlocked            int64\n",
+      "EngagementLevel                object\n",
+      "age_group                    category\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "bb14f72a",
    "metadata": {},
    "outputs": [
@@ -84,7 +116,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\MMT\\AppData\\Local\\Temp\\ipykernel_4496\\3955723992.py:13: FutureWarning: \n",
+      "C:\\Users\\MMT\\AppData\\Local\\Temp\\ipykernel_4496\\3160764134.py:14: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -130,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "6a316df6",
    "metadata": {},
    "outputs": [
@@ -171,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 83,
    "id": "a9571bfd",
    "metadata": {},
    "outputs": [
@@ -220,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "a7e61b06",
    "metadata": {},
    "outputs": [
@@ -250,28 +282,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "09190c03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# other vars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "4c120e08",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['PlayerID', 'Age', 'Gender', 'Location', 'GameGenre', 'PlayTimeHours',\n",
+      "       'InGamePurchases', 'GameDifficulty', 'SessionsPerWeek',\n",
+      "       'AvgSessionDurationMinutes', 'PlayerLevel', 'AchievementsUnlocked',\n",
+      "       'EngagementLevel', 'age_group'],\n",
+      "      dtype='object')\n",
+      "Chi2ContingencyResult(statistic=np.float64(1.1808260120611853), pvalue=np.float64(0.5540983914933876), dof=2, expected_freq=array([[ 4150.25228556,  6185.74771444],\n",
+      "       [ 4145.4338812 ,  6178.5661188 ],\n",
+      "       [ 7779.31383324, 11594.68616676]]))\n"
+     ]
+    }
+   ],
    "source": [
     "# Multivariate Analysis\n",
-    "# See if other variables (playtime, game mode, rewards) interact with engagement to influence purchases"
+    "# See if other variables (playtime, game mode, rewards) interact with engagement to influence purchases\n",
+    "\n",
+    "print(data.columns)\n",
+    "\n",
+    "# Engagement Level and Gender\n",
+    "contingency_table = pd.crosstab(data['EngagementLevel'], data['Gender'])\n",
+    "\n",
+    "result = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "# P values is 0.554 which is more than 0.05."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
+   "id": "fb5279f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F_Stat: 1.5074121325579353 \n",
+      " P_Value: 0.22149497585816014\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ANOVA test\n",
+    "\n",
+    "groups = [\n",
+    "    data.loc[data['EngagementLevel'] == 'Low', 'Age'],\n",
+    "    data.loc[data['EngagementLevel'] == 'Medium', 'Age'],\n",
+    "    data.loc[data['EngagementLevel'] == 'High', 'Age']\n",
+    "]\n",
+    "\n",
+    "f_stat, p_val = f_oneway(*groups)\n",
+    "print(f\"F_Stat: {f_stat} \\n P_Value: {p_val}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "47bdd09b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2ContingencyResult(statistic=np.float64(3.5570723296274243), pvalue=np.float64(0.7363616400087856), dof=6, expected_freq=array([[2089.9715242 , 3099.19928061, 1015.94045062, 4130.88874457],\n",
+      "       [2087.54508668, 3095.60113903, 1014.76095319, 4126.0928211 ],\n",
+      "       [3917.48338912, 5809.19958036, 1904.29859619, 7743.01843433]]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "contingency_table = pd.crosstab(data['EngagementLevel'], data['Location'])\n",
+    "\n",
+    "result = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "# P value is 0.736"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "d5f747b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2ContingencyResult(statistic=np.float64(8.611218189112536), pvalue=np.float64(0.3761462722846439), dof=8, expected_freq=array([[2075.5134136 , 2053.05170605, 2061.05530299, 2077.83703852,\n",
+      "        2068.54253884],\n",
+      "       [2073.1037618 , 2050.66813209, 2058.66243693, 2075.42468901,\n",
+      "        2066.14098017],\n",
+      "       [3890.3828246 , 3848.28016186, 3863.28226008, 3894.73827247,\n",
+      "        3877.31648099]]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "contingency_table = pd.crosstab(data['EngagementLevel'], data['GameGenre'])\n",
+    "\n",
+    "result = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "# p value is 0.376"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "a21652b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2ContingencyResult(statistic=np.float64(80068.00000000001), pvalue=np.float64(0.49734151847181757), dof=80066, expected_freq=array([[0.25818055, 0.25818055, 0.25818055, ..., 0.25818055, 0.25818055,\n",
+      "        0.25818055],\n",
+      "       [0.2578808 , 0.2578808 , 0.2578808 , ..., 0.2578808 , 0.2578808 ,\n",
+      "        0.2578808 ],\n",
+      "       [0.48393865, 0.48393865, 0.48393865, ..., 0.48393865, 0.48393865,\n",
+      "        0.48393865]], shape=(3, 40034)))\n"
+     ]
+    }
+   ],
+   "source": [
+    "contingency_table = pd.crosstab(data['EngagementLevel'], data['PlayTimeHours'])\n",
+    "\n",
+    "result = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "# p value is 0.497"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "70c399ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2ContingencyResult(statistic=np.float64(4.17328935477559), pvalue=np.float64(0.38306138006347035), dof=4, expected_freq=array([[5167.48363891, 2067.50981666, 3101.00654444],\n",
+      "       [5161.4842384 , 2065.10945696, 3097.40630464],\n",
+      "       [9686.0321227 , 3875.38072638, 5812.58715092]]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "contingency_table = pd.crosstab(data['EngagementLevel'], data['GameDifficulty'])\n",
+    "\n",
+    "result = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "# p value is 0.383"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "ac9e503d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F_Stat: 11625.820362943932 \n",
+      " P_Value: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ANOVA test\n",
+    "\n",
+    "groups = [\n",
+    "    data.loc[data['EngagementLevel'] == 'Low', 'SessionsPerWeek'],\n",
+    "    data.loc[data['EngagementLevel'] == 'Medium', 'SessionsPerWeek'],\n",
+    "    data.loc[data['EngagementLevel'] == 'High', 'SessionsPerWeek']\n",
+    "]\n",
+    "\n",
+    "f_stat, p_val = f_oneway(*groups)\n",
+    "print(f\"F_Stat: {f_stat} \\n P_Value: {p_val}\")\n",
+    "\n",
+    "# Players with higher engagement levels play significantly more sessions per week."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "6e3ff927",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F_Stat: 6207.332075841684 \n",
+      " P_Value: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ANOVA test\n",
+    "\n",
+    "groups = [\n",
+    "    data.loc[data['EngagementLevel'] == 'Low', 'AvgSessionDurationMinutes'],\n",
+    "    data.loc[data['EngagementLevel'] == 'Medium', 'AvgSessionDurationMinutes'],\n",
+    "    data.loc[data['EngagementLevel'] == 'High', 'AvgSessionDurationMinutes']\n",
+    "]\n",
+    "\n",
+    "f_stat, p_val = f_oneway(*groups)\n",
+    "print(f\"F_Stat: {f_stat} \\n P_Value: {p_val}\")\n",
+    "\n",
+    "# average session duration differs across engagement levels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "dd563c34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "108.1262051018184 1.4715293899525775e-47\n"
+     ]
+    }
+   ],
+   "source": [
+    "groups = [data.loc[data['EngagementLevel']=='Low','PlayerLevel'],\n",
+    "          data.loc[data['EngagementLevel']=='Medium','PlayerLevel'],\n",
+    "          data.loc[data['EngagementLevel']=='High','PlayerLevel']]\n",
+    "f_stat, p_val = f_oneway(*groups)\n",
+    "print(f_stat, p_val)\n",
+    "\n",
+    "# p val is less than 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "2b875f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "117.07733777580695 2.0048810813344537e-51\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import f_oneway\n",
+    "groups = [data.loc[data['EngagementLevel']=='Low','AchievementsUnlocked'],\n",
+    "          data.loc[data['EngagementLevel']=='Medium','AchievementsUnlocked'],\n",
+    "          data.loc[data['EngagementLevel']=='High','AchievementsUnlocked']]\n",
+    "f_stat, p_val = f_oneway(*groups)\n",
+    "print(f_stat, p_val)\n",
+    "\n",
+    "\n",
+    "# p value is less than 0.05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07236414",
+   "metadata": {},
+   "source": [
+    "# Test Results\n",
+    "From all the tests done above with **Engagement Level** as the **target** variable, we can conclude the following:\n",
+    "\n",
+    "1. PlayerLevel and AchievementsUnlocked have p-values less than 0.05, which shows that Engagement Level and those columns are  likely not independent\n",
+    "2. p-value for SessionsPerWeek and AvgSessionDurationMinutes are so low that it is considered as 0.0. This also shows that the columns ar elikely not independent.\n",
+    "\n",
+    "#### Above, we used ANOVA tests for numeric variables and chi square tests for categorical variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "id": "cc5ac366",
    "metadata": {},
    "outputs": [],
@@ -282,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "c22c1d21",
    "metadata": {},
    "outputs": [],
@@ -293,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "9c79dd69",
    "metadata": {},
    "outputs": [],
