Changed all var names to not be the same for tests

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "id": "a12fd7d0",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from scipy.stats import chi2_contingency, f_oneway\n",
+    "from statsmodels.stats.multicomp import pairwise_tukeyhsd\n",
     "\n",
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "id": "29a47002",
    "metadata": {},
    "outputs": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 108,
    "id": "aaa76d0f",
    "metadata": {},
    "outputs": [
@@ -84,20 +85,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PlayerID                        int64\n",
-      "Age                             int64\n",
-      "Gender                         object\n",
-      "Location                       object\n",
-      "GameGenre                      object\n",
-      "PlayTimeHours                 float64\n",
-      "InGamePurchases                 int64\n",
-      "GameDifficulty                 object\n",
-      "SessionsPerWeek                 int64\n",
-      "AvgSessionDurationMinutes       int64\n",
-      "PlayerLevel                     int64\n",
-      "AchievementsUnlocked            int64\n",
-      "EngagementLevel                object\n",
-      "age_group                    category\n",
+      "PlayerID                       int64\n",
+      "Age                            int64\n",
+      "Gender                        object\n",
+      "Location                      object\n",
+      "GameGenre                     object\n",
+      "PlayTimeHours                float64\n",
+      "InGamePurchases                int64\n",
+      "GameDifficulty                object\n",
+      "SessionsPerWeek                int64\n",
+      "AvgSessionDurationMinutes      int64\n",
+      "PlayerLevel                    int64\n",
+      "AchievementsUnlocked           int64\n",
+      "EngagementLevel               object\n",
       "dtype: object\n"
      ]
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "id": "bb14f72a",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 110,
    "id": "6a316df6",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "id": "a9571bfd",
    "metadata": {},
    "outputs": [
@@ -251,8 +251,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "857eee76",
+   "metadata": {},
+   "source": [
+    "# Conducting ANOVA and Chi Square Tests"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 112,
    "id": "a7e61b06",
    "metadata": {},
    "outputs": [
@@ -270,11 +278,11 @@
     "# Checking whether purchase behaviour is statistically dependent on engagement level or not\n",
     "# Using Chi-square test\n",
     "\n",
-    "contingency_table = pd.crosstab(data['EngagementLevel'], data['InGamePurchases'])\n",
+    "contingency_table_purchase = pd.crosstab(data['EngagementLevel'], data['InGamePurchases'])\n",
     "\n",
-    "result = chi2_contingency(contingency_table)\n",
+    "result_purchase = chi2_contingency(contingency_table_purchase)\n",
     "\n",
-    "print(result)\n",
+    "print(result_purchase)\n",
     "\n",
     "# P-value = 0.225\n",
     "# Engagement Level alone doesn't significantly influence purchase behaviour"
@@ -282,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "id": "4c120e08",
    "metadata": {},
    "outputs": [
@@ -308,18 +316,18 @@
     "print(data.columns)\n",
     "\n",
     "# Engagement Level and Gender\n",
-    "contingency_table = pd.crosstab(data['EngagementLevel'], data['Gender'])\n",
+    "contingency_table_gender = pd.crosstab(data['EngagementLevel'], data['Gender'])\n",
     "\n",
-    "result = chi2_contingency(contingency_table)\n",
+    "result_gender = chi2_contingency(contingency_table_gender)\n",
     "\n",
-    "print(result)\n",
+    "print(result_gender)\n",
     "\n",
     "# P values is 0.554 which is more than 0.05."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "id": "fb5279f5",
    "metadata": {},
    "outputs": [
@@ -335,19 +343,19 @@
    "source": [
     "# ANOVA test\n",
     "\n",
-    "groups = [\n",
+    "groups_age = [\n",
     "    data.loc[data['EngagementLevel'] == 'Low', 'Age'],\n",
     "    data.loc[data['EngagementLevel'] == 'Medium', 'Age'],\n",
     "    data.loc[data['EngagementLevel'] == 'High', 'Age']\n",
     "]\n",
     "\n",
-    "f_stat, p_val = f_oneway(*groups)\n",
-    "print(f\"F_Stat: {f_stat} \\n P_Value: {p_val}\")"
+    "f_stat_age, p_val_age = f_oneway(*groups_age)\n",
+    "print(f\"F_Stat: {f_stat_age} \\n P_Value: {p_val_age}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 115,
    "id": "47bdd09b",
    "metadata": {},
    "outputs": [
@@ -362,18 +370,18 @@
     }
    ],
    "source": [
-    "contingency_table = pd.crosstab(data['EngagementLevel'], data['Location'])\n",
+    "contingency_table_location = pd.crosstab(data['EngagementLevel'], data['Location'])\n",
     "\n",
-    "result = chi2_contingency(contingency_table)\n",
+    "result_location = chi2_contingency(contingency_table_location)\n",
     "\n",
-    "print(result)\n",
+    "print(result_location)\n",
     "\n",
     "# P value is 0.736"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "id": "d5f747b0",
    "metadata": {},
    "outputs": [
@@ -391,18 +399,18 @@
     }
    ],
    "source": [
-    "contingency_table = pd.crosstab(data['EngagementLevel'], data['GameGenre'])\n",
+    "contingency_table_genre = pd.crosstab(data['EngagementLevel'], data['GameGenre'])\n",
     "\n",
-    "result = chi2_contingency(contingency_table)\n",
+    "result_genre = chi2_contingency(contingency_table_genre)\n",
     "\n",
-    "print(result)\n",
+    "print(result_genre)\n",
     "\n",
     "# p value is 0.376"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 117,
    "id": "a21652b4",
    "metadata": {},
    "outputs": [
@@ -420,18 +428,18 @@
     }
    ],
    "source": [
-    "contingency_table = pd.crosstab(data['EngagementLevel'], data['PlayTimeHours'])\n",
+    "contingency_table_playhours = pd.crosstab(data['EngagementLevel'], data['PlayTimeHours'])\n",
     "\n",
-    "result = chi2_contingency(contingency_table)\n",
+    "result_playhours = chi2_contingency(contingency_table_playhours)\n",
     "\n",
-    "print(result)\n",
+    "print(result_playhours)\n",
     "\n",
     "# p value is 0.497"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 118,
    "id": "70c399ed",
    "metadata": {},
    "outputs": [
@@ -446,18 +454,18 @@
     }
    ],
    "source": [
-    "contingency_table = pd.crosstab(data['EngagementLevel'], data['GameDifficulty'])\n",
+    "contingency_table_difficulty = pd.crosstab(data['EngagementLevel'], data['GameDifficulty'])\n",
     "\n",
-    "result = chi2_contingency(contingency_table)\n",
+    "result_difficulty = chi2_contingency(contingency_table_difficulty)\n",
     "\n",
-    "print(result)\n",
+    "print(result_difficulty)\n",
     "\n",
     "# p value is 0.383"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 119,
    "id": "ac9e503d",
    "metadata": {},
    "outputs": [
@@ -473,21 +481,21 @@
    "source": [
     "# ANOVA test\n",
     "\n",
-    "groups = [\n",
+    "groups_sessions = [\n",
     "    data.loc[data['EngagementLevel'] == 'Low', 'SessionsPerWeek'],\n",
     "    data.loc[data['EngagementLevel'] == 'Medium', 'SessionsPerWeek'],\n",
     "    data.loc[data['EngagementLevel'] == 'High', 'SessionsPerWeek']\n",
     "]\n",
     "\n",
-    "f_stat, p_val = f_oneway(*groups)\n",
-    "print(f\"F_Stat: {f_stat} \\n P_Value: {p_val}\")\n",
+    "f_stat_sessions, p_val_sessions = f_oneway(*groups_sessions)\n",
+    "print(f\"F_Stat: {f_stat_sessions} \\n P_Value: {p_val_sessions}\")\n",
     "\n",
     "# Players with higher engagement levels play significantly more sessions per week."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 120,
    "id": "6e3ff927",
    "metadata": {},
    "outputs": [
@@ -503,21 +511,21 @@
    "source": [
     "# ANOVA test\n",
     "\n",
-    "groups = [\n",
+    "groups_asdm = [\n",
     "    data.loc[data['EngagementLevel'] == 'Low', 'AvgSessionDurationMinutes'],\n",
     "    data.loc[data['EngagementLevel'] == 'Medium', 'AvgSessionDurationMinutes'],\n",
     "    data.loc[data['EngagementLevel'] == 'High', 'AvgSessionDurationMinutes']\n",
     "]\n",
     "\n",
-    "f_stat, p_val = f_oneway(*groups)\n",
-    "print(f\"F_Stat: {f_stat} \\n P_Value: {p_val}\")\n",
+    "f_stat_asdm, p_val_asdm = f_oneway(*groups_asdm)\n",
+    "print(f\"F_Stat: {f_stat_asdm} \\n P_Value: {p_val_asdm}\")\n",
     "\n",
     "# average session duration differs across engagement levels."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 121,
    "id": "dd563c34",
    "metadata": {},
    "outputs": [
@@ -530,18 +538,18 @@
     }
    ],
    "source": [
-    "groups = [data.loc[data['EngagementLevel']=='Low','PlayerLevel'],\n",
+    "groups_level = [data.loc[data['EngagementLevel']=='Low','PlayerLevel'],\n",
     "          data.loc[data['EngagementLevel']=='Medium','PlayerLevel'],\n",
     "          data.loc[data['EngagementLevel']=='High','PlayerLevel']]\n",
-    "f_stat, p_val = f_oneway(*groups)\n",
-    "print(f_stat, p_val)\n",
+    "f_stat_level, p_val_level = f_oneway(*groups_level)\n",
+    "print(f_stat_level, p_val_level)\n",
     "\n",
     "# p val is less than 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "id": "2b875f1c",
    "metadata": {},
    "outputs": [
@@ -554,12 +562,11 @@
     }
    ],
    "source": [
-    "from scipy.stats import f_oneway\n",
-    "groups = [data.loc[data['EngagementLevel']=='Low','AchievementsUnlocked'],\n",
+    "groups_achievements = [data.loc[data['EngagementLevel']=='Low','AchievementsUnlocked'],\n",
     "          data.loc[data['EngagementLevel']=='Medium','AchievementsUnlocked'],\n",
     "          data.loc[data['EngagementLevel']=='High','AchievementsUnlocked']]\n",
-    "f_stat, p_val = f_oneway(*groups)\n",
-    "print(f_stat, p_val)\n",
+    "f_stat_achievements, p_val_achievements = f_oneway(*groups_achievements)\n",
+    "print(f_stat_achievements, p_val_achievements)\n",
     "\n",
     "\n",
     "# p value is less than 0.05"
@@ -574,25 +581,56 @@
     "From all the tests done above with **Engagement Level** as the **target** variable, we can conclude the following:\n",
     "\n",
     "1. PlayerLevel and AchievementsUnlocked have p-values less than 0.05, which shows that Engagement Level and those columns are  likely not independent\n",
-    "2. p-value for SessionsPerWeek and AvgSessionDurationMinutes are so low that it is considered as 0.0. This also shows that the columns ar elikely not independent.\n",
+    "2. p-value for SessionsPerWeek and AvgSessionDurationMinutes are so low that it is considered as 0.0. This also shows that the columns are likely not independent.\n",
     "\n",
     "#### Above, we used ANOVA tests for numeric variables and chi square tests for categorical variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
+   "id": "d3e98ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Running Tukey's HSD for the above 4 variables\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "84375051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Each plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "026cf10f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multi plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "id": "cc5ac366",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Clustering\n",
-    "# \tGroup users by behavior patterns and see if purchases emerge in specific clusters"
+    "# Group users by behavior patterns and see if purchases emerge in specific clusters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 127,
    "id": "c22c1d21",
    "metadata": {},
    "outputs": [],
@@ -603,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 128,
    "id": "9c79dd69",
    "metadata": {},
    "outputs": [],
